Scrollbar issue fixed -re-attempt 1.

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   display: flex;
+  overflow: hidden;
   height: 100%;
   width: 100%;
   flex-direction: column;
@@ -17,8 +18,8 @@
   align-items: center;
   width: 100%;
   height: 10.5vh;
-  margin: 11.81vh 0 0 0;
-  padding: 1.75vh 0 0 0;
+  margin: 10.25vh 0 0 0;
+  padding: 1.25vh 0 0 0;
   background-color: rgba(0, 0, 0, 0.83);
 }
 
@@ -55,7 +56,7 @@
   padding: 1.5vh 0 0 0;
   width: 20vw;
   height: 6vh;
-  margin: 1vh 0 0 10.5vw;
+  margin: -0.4vh 0 0 10.5vw;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.84);
 }
