--- a/app/src/components/logIn/logIn.css
+++ b/app/src/components/logIn/logIn.css
@@ -25,7 +25,7 @@
     height: 42vh;
     width: 40vw;
     border: 3px solid rgba(229, 130, 11, 0.79);
-    margin: 6vh 0 1.4vh 0;
+    margin: 7vh 0 1.4vh 0;
     padding: 7vh 0 0 0;
     background-color: rgba(16, 0, 0, 0.56);
 }
